BradkenProduction/force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <description>Tracks the employment history of a contact between accounts.</description>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Employment History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>