BradkenProduction/force-app/main/default/objects/Employment_History__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>