BradkenProduction/force-app/main/default/objects/Employment_History__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of the employment</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>