BradkenProduction/force-app/main/default/objects/Employment_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of Employment</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>