BradkenProduction/force-app/main/default/objects/Employment_History__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Position Title</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>